# radu-polls

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.js
core/templates/: base.html
core/templatetags/: vite.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
radu_polls/: asgi.py  settings.py  urls.py  wsgi.py
