[tool.poetry]
name = "radu-polls"
version = "0.1.0"
description = "\"Obligatory polls app.\""
authors = ["Radu Suciu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
